# mneme

./: .dockerignore  .gitignore  Cargo.toml  DOCKER_COMPOSE.md  Dockerfile  LICENSE  README.md  build.rs  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
clients/: README.md
config/: core.toml  keeper.toml  solo.toml
docker/: entrypoint-core.sh  entrypoint-keeper.sh  entrypoint-replica.sh  entrypoint-solo.sh  hub-cli.md  hub-core.md  hub-keeper.md  integration-test.sh  prometheus.yml  smoke-test.sh  test_core_crash.sh  test_ha.sh  test_keeper_crash.sh  test_stress.sh  test_tls.sh
docker/configs/: core-1.toml  core-2.toml  core-3.toml  core.toml  keeper-1.toml  keeper-2.toml  keeper-3.toml  replica-2.toml  replica-ha-1.toml  replica-ha-2.toml  replica.toml  solo.toml
docs/: API.md  CLIENT_PROTOCOL.md  COMPONENTS.md  DATABASE_DESIGN.md  OPERATIONS.md  usage-guide.md
docs/clients/: README.md
docs/setup/: docker.md  kubernetes.md  linux.md
k8s/: README.md  core.yaml  full-cluster.yaml  keeper.yaml  monitoring.yaml  namespace.yaml  replica.yaml  secrets.yaml  solo.yaml
k8s/helm/mneme/: Chart.yaml  values.cluster.yaml  values.ha.yaml  values.yaml
k8s/helm/mneme/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  core.yaml  keeper.yaml  replica.yaml  secrets.yaml
mneme-bench/: Cargo.toml
mneme-bench/benches/: latency.rs
mneme-bench/src/: lib.rs  main.rs
mneme-cli/: Cargo.toml
mneme-cli/src/: main.rs
mneme-client/: Cargo.toml  README.md
mneme-client/src/: cmd_admin.rs  cmd_db.rs  cmd_hash.rs  cmd_json.rs  cmd_kv.rs  cmd_list.rs  cmd_pipeline.rs  cmd_zset.rs  conn.rs  error.rs  lib.rs  pool.rs  response.rs
mneme-client/tests/: unit_pool_config.rs  unit_response.rs
mneme-common/: Cargo.toml
mneme-common/src/: config.rs  error.rs  frame.rs  herold_client.rs  lib.rs  types.rs
mneme-core/: Cargo.toml
mneme-core/src/: lib.rs  main.rs
mneme-core/src/auth/: argus.rs  mod.rs  rbac.rs  users.rs
mneme-core/src/cluster/: herold.rs  mod.rs  raft_transport.rs  themis.rs
mneme-core/src/core/: iris.rs  lethe.rs  mnemosyne.rs  mod.rs  moirai.rs  pool_mmap.rs
mneme-core/src/net/: aegis.rs  charon.rs  hermes.rs  mod.rs
mneme-core/src/obs/: aletheia.rs  delphi.rs  mod.rs
mneme-core/tests/: integration_data_types.rs  integration_solo.rs  integration_solo_comprehensive.rs
mneme-keeper/: Cargo.toml
mneme-keeper/src/: lib.rs  main.rs
mneme-keeper/src/keeper/: aoide.rs  aoide_platform.rs  hypnos.rs  melete.rs  mod.rs  oneiros.rs
scripts/: common.sh  setup-docker.sh  setup-k8s.sh  setup-linux.sh  setup.sh
