[package]
name = "mneme-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mneme-cli"
path = "src/main.rs"

[dependencies]
mneme-common = { path = "../mneme-common" }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
